Implemented Windows distribution with custom runtime